feat: Updated landing page asset

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-body {
-  font-family: 'Poppins', sans-serif; 
-  margin: 0;
-  overflow: hidden; 
-  background-color: #f0f0f0; 
-}
-
 .nav {
   background-color: #fb6736;
   display: flex; 
@@ -63,7 +56,7 @@ body {
 /* ___________________________________________________ */
 
 .parallax {
-  background-image: url("background.svg");
+  background-image: url("landing.gif");
   min-height: 100vh;
   background-attachment: fixed;
   background-position: center;
@@ -81,17 +74,17 @@ body {
   margin-top: 10vh;
   margin-left: 10vh;
   float: left;
-  width: 35%;
+  width: 30%;
   text-align: justify;
 }
 
 .welcomeTitle {
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
-  font-size: 5.5rem;
+  font-size: 6.4rem;
   color: transparent;
   background: linear-gradient(45deg, #F44611, #ff7f50, #F44611, #ff7f50);
-  background-size: 200% 100%;
+  text-shadow: 0 4px 10px rgba(156, 156, 156, 0.2);
   background-clip: text;
   animation: gradientWave 2s ease infinite;
   margin-bottom: 20px;
@@ -116,12 +109,14 @@ body {
   display: inline-block;
   padding: 10px 20px;
   background-color: #F44611;
+  border: none;
   color: white;
   text-align: center;
   text-decoration: none;
   border-radius: 15px;
   cursor: pointer;
   transition: background-color 0.5s ease;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   font-size: 20px;
 }
 
@@ -134,7 +129,7 @@ body {
   margin: 5px;
   font-family: 'Poppins', sans-serif;
   display: inline-block;
-  padding: 5px 10px;
+  padding: 5px 15px;
   background-color: #ffffff;
   color: rgb(0, 0, 0);
   text-align: center;
@@ -163,7 +158,7 @@ body {
   font-family: 'Poppins', sans-serif;
   font-size: 20px;
   color: white;
-  animation: typing 5s steps(30, end) infinite, blink-caret .75s step-end infinite;
+  animation: typing 10s steps(30, end) infinite, blink-caret .75s step-end infinite;
 }
 
 @keyframes typing {
@@ -229,6 +224,7 @@ body {
   padding: 8px;
   border-radius: 15px;
   margin-bottom: 10px;
+  border-color: #ff7f50;
 }
 
 .signUpForm button {
@@ -243,6 +239,8 @@ body {
   transition: background-color 0.5s ease;
   font-size: 20px;
   float: right;
+  border: none;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .signUpForm button:hover {
