--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@
 .welcomeTitle {
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
-  font-size: 6.4rem;
+  font-size: 9.2vh;
   color: transparent;
   background: linear-gradient(45deg, #F44611, #ff7f50, #F44611, #ff7f50);
   text-shadow: 0 4px 10px rgba(156, 156, 156, 0.2);
