--- a/styles.css
+++ b/styles.css
@@ -200,7 +200,7 @@
 }
 
 .signUpForm {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif !important;
   display: none;
   position: fixed;
   top: 50%;
@@ -212,7 +212,7 @@
   border: 1px solid #ccc;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   animation: fadeIn 0.8s ease forwards;
-  width: 400px; 
+  width: 500px; 
   max-width: 90%; 
   height: auto; 
   padding: 20px; 
@@ -222,7 +222,8 @@
 .signUpForm input {
   width: 100%;
   padding: 8px;
-  border-radius: 15px;
+  border-radius: 10px;
+  margin-top: -3px;
   margin-bottom: 10px;
   border-color: #ff7f50;
 }
@@ -248,6 +249,15 @@
   color: black;
 }
 
+.formGroup p {
+  padding: 0px;
+  margin-bottom: 5px;
+}
+
+.required {
+  margin-top: -10px;
+}
+
 .close {
   position: absolute;
   top: 5px;
@@ -265,7 +275,7 @@
   font-family: 'Poppins', sans-serif;
 }
 
-/* ---------------------------------- */
+/* --------------------------------------------------- */
 
 .overlay {
   position: fixed;
